syntax = "proto3";

package in_toto_attestation.v1_0;

import "google/protobuf/struct.proto";

option go_package = "github.com/in-toto/attestation/go/in_toto_attestation/v1.0";

// Proto representation of the in-toto v1.0 ResourceDescriptor.
// https://github.com/in-toto/attestation/blob/main/spec/v1.0/resource_descriptor.md
// Validation of all fields is left to the users of this proto.
message ResourceDescriptor {
  string name = 1;

  string uri = 2;

  map<string, string> digest = 3;

  bytes content = 4;

  string downloadLocation = 5;

  string mediaType = 6;

  map<string, google.protobuf.Struct> annotations = 7;
}
